# cairo-vm-ts

./: .gitignore  .gitmodules  Makefile  README.md  bun.lockb  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.types.json
.github/workflows/: tests  tests.yml  trunk-check.yaml
.trunk/: trunk.yaml
cairo_programs/cairo/: add.cairo  add.casm.json  add.sierra  ecdsa_recover.casm.json  multiple_fn.cairo  test_less_than_false.cairo  u32_overflowing_sub_err.cairo  u32_overflowing_sub_valid.cairo
cairo_programs/cairo_0/: big_struct.cairo  bitwise_builtin.cairo  bitwise_builtin_test.cairo  bitwise_output.cairo  bitwise_recursion.cairo  bitwise_test.cairo  call_function_assign_param_by_name.cairo  ecdsa_builtin.cairo  ecop_builtin.cairo  factorial.cairo  fibonacci.cairo  function_return.cairo  function_return_if_print.cairo  function_return_to_variable.cairo  if_and_prime.cairo  if_in_function.cairo  if_list.cairo  integration.cairo  integration_with_alloc_locals.cairo  jmp.cairo  jmp_if_condition.cairo  keccak_builtin.cairo  keccak_builtin_seed.cairo  memory_holes.cairo  multiplicative_inverse.cairo  pedersen_builtin.cairo  pointers.cairo  poseidon_builtin.cairo  print.cairo  range_check96_builtin.cairo  range_check_builtin.cairo  return.cairo  reversed_register_instructions.cairo  simple_print.cairo  struct.cairo  test_addition_if.cairo  (+2 more)
docs/: howToImplementAHint.md
enviroment/: pyvenv.cfg
src/: cli.ts  felt.ts  index.ts  maybeRelocatable.test.ts  maybeRelocatable.ts  memory.ts  relocatable.test.ts  relocatable.ts  types.ts
(+212 files in other folders)
